fix workingTime display